--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -2,26 +2,12 @@
   <ion-content>
 	 <img class="logo" src="../img/loog.png" alt="Logo"/>
      
-	 <form class="searhForm" ng-submit="searcForm()" action="#/app/view-business">
+	 <form class="searhForm" ng-submit="searcForm(searchItem)">
 		  <div class="list list-inset">
 			  <label class="item item-input">
-				 <div class="input-label">Où voulez-vous aller ?</div>
-				<input type="text" placeholder="Où voulez-vous aller ?">
+				 <input type="text" ng-model="searchItem" placeholder="Où voulez-vous aller ?">
 			  </label>
 			  
-			  <!--<label class="item item-input">
-				<input type="text" placeholder="Où voulez-vous aller ?" ng-model="loginData.location2">
-			  </label>-->
-			  
-			   <label class="item item-input item-select">
-				<div class="input-label">
-				  Choose
-				</div>
-				<select>
-				  <option value="Option1" selected>Ecomusée</option>
-				</select>
-			  </label>
-			   
 			  <button class="button button-block button-calm" type="submit">Search</button>
 		 </div>
 	</form>
