--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,8 +18,8 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#">
-          L’île de Ré
+        <ion-item menu-close href="/">
+          home
         </ion-item>
         <ion-item menu-close href="#">
           Séjour
