--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -11,6 +11,7 @@
 			  <button class="button button-block button-calm" type="submit">Search</button>
 		 </div>
 	</form>
+	  {{listItem}}
  </ion-content>
 </ion-view>
 
