Logo issues fixed

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,6 +1,6 @@
 <ion-view view-title="iledere apps">
   <ion-content>
-	 <img class="logo" src="../img/loog.png" alt="Logo"/>
+	 <img class="logo" ng-src="./img/loog.png" alt="Logo"/>
      
 	 <form class="searhForm" ng-submit="searcForm(searchItem)">
 		  <div class="list list-inset">
