--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -119,3 +119,28 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 {
 	margin-bottom: 20px;
 }
+.business-name{
+	color: #666;
+	cursor: pointer;
+}
+.no-border
+{
+	border: 0;
+}
+.m7
+{
+	>p
+	{
+		margin-bottom: 5px;
+	}
+}
+.button
+{
+	&.button-custom
+	{
+		min-height: 42px;
+		line-height: 38px;
+		border-radius: 3px;
+		margin: 10px !important;
+	}
+}
