--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -13,31 +13,11 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-calm">
-      <h1 class="title">Menu</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close href="/">
-          home
-        </ion-item>
-        <ion-item menu-close href="#">
-          Séjour
-        </ion-item>
-        <ion-item menu-close href="#">
-          Découverte
-        </ion-item>
-        <ion-item menu-close href="#">
-          Activités
-        </ion-item>
-		<ion-item menu-close href="#">
-          Actualités
-        </ion-item>
-		<ion-item menu-close href="#">
-          Contact
-        </ion-item>
-		  
-      </ion-list>
-    </ion-content>
+	  <ion-header-bar class="bar-calm">
+		  <h1 class="title">Menu</h1>
+		</ion-header-bar>
+	  
+		<ion-nav-view name="sideMenuItem"></ion-nav-view>
   </ion-side-menu>
 </ion-side-menus>
+ 
