Updated side menu

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -141,6 +141,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		min-height: 42px;
 		line-height: 38px;
 		border-radius: 3px;
-		margin: 10px !important;
+		margin: 10px 15px !important;
 	}
 }
