--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9808,4 +9808,4 @@ a.button {
   min-height: 42px;
   line-height: 38px;
   border-radius: 3px;
-  margin: 10px !important; }
+  margin: 10px 15px !important; }
