--- a/www/templates/view-business.html
+++ b/www/templates/view-business.html
@@ -6,7 +6,7 @@
 					<h2 ng-click="">{{listItems.nom}}</h2>
 					<p class="text-blue">{{listItems.ville}}</p>
 					
-					<ng-map class="mb20" zoom="1">
+					<ng-map  center="48.8567,2.3508" class="mb20" zoom="14">
 						<marker position="48.8567,2.3508"></marker>
 					</ng-map>
 					
