All category menus

--- a/www/templates/accommodation-menu.html
+++ b/www/templates/accommodation-menu.html
@@ -3,32 +3,48 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Tous les hébergements
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Hôtels
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Campings
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		 Résidences
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
+		 Chambres d’hôtes
 		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Gîtes
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Thalasso
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Villages Vacances
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Les Agences Immobilières
+		</ion-item>   
 		  
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
