--- a/www/templates/culture-menu.html
+++ b/www/templates/culture-menu.html
@@ -3,33 +3,33 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Tous les lieux culturels
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Arts / Artistes
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Musées / Cinéma
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Concerts / Spectacles
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Musique
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		  Librairies
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
-		</ion-item>
-		  
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
