--- a/www/templates/deplacer-menu.html
+++ b/www/templates/deplacer-menu.html
@@ -3,33 +3,25 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Location de Vélos
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Location de Voiture
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Autocars / Navettes 
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Taxis
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Bus Discothèque
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
-		</ion-item>
-		  
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
