--- a/www/templates/eat-well-menu.html
+++ b/www/templates/eat-well-menu.html
@@ -3,32 +3,56 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Tous les restaurants
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Gastronomiques
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Restaurants
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		 Brasseries
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
+		 Dégustation Fruits de Mer
 		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Cuisine du Monde
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Pizzerias
+		</ion-item> 
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 A Emporter
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		Food Truck / Traiteurs
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Bars à Vins / Caves à Vins
+		</ion-item> 
+		  
+		 <ion-item menu-close ng-click="categorySearch($event)">
+		 Chocolatiers / Glaciers
+		</ion-item> 
 		  
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
