--- a/www/templates/night-world-menu.html
+++ b/www/templates/night-world-menu.html
@@ -3,33 +3,32 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Tout le monde de la nuit
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Bars
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Discothèques
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Festivals
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		  Navettes
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
-		</ion-item>
-		  
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
