--- a/www/templates/side-menu.html
+++ b/www/templates/side-menu.html
@@ -1,20 +1,19 @@
-<!--<ion-nav-bar animation="nav-title-slide-ios7" ype="bar-negative" back-button-type="button-icon" back-button-icon="ion-arrow-left-c"></ion-nav-bar>-->
 <ion-view view-title="Main Menu">
 	<ion-content>
 	  <ion-list>
 		<ion-item href="#" menu-close>
 		 	L’île de Ré
 		</ion-item>
-		<ion-item href="#" menu-close>
+		<ion-item href="#/app/stay">
 		  Séjour
 		</ion-item>
-		  <ion-item href="#/app/sub-menu">
+		<ion-item href="#/app/discovery">
 		 	Découverte
 		</ion-item>
-		<ion-item href="#" menu-close>
+		<ion-item href="#/app/activities">
 		  Activités
 		</ion-item>
-		  <ion-item href="#" menu-close>
+		<ion-item href="#" menu-close>
 		 	Actualités
 		</ion-item>
 		<ion-item href="#" menu-close>
