--- a/www/templates/sports-recreation-menu.html
+++ b/www/templates/sports-recreation-menu.html
@@ -3,33 +3,45 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Toutes les activités
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		 Tennis / Squash
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Golf
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		 Ecuries / Poney Club
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		  Natation
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
+		  Skate
 		</ion-item>
 		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Danse
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Relaxation
+		</ion-item>
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
