--- a/www/templates/trade-menu.html
+++ b/www/templates/trade-menu.html
@@ -3,33 +3,57 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Tous les commerces
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		 Alimentation Générale
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Boulangeries
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		 Made in Ré
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		  Mode / Déco
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
+		  Tabac / Presse
 		</ion-item>
 		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Services
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Coiffure / Bien-Etre
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Banques / Assurances
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Artisans
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Auto - Moto / Bateau
+		</ion-item>
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
