--- a/www/templates/water-acitivity-menu.html
+++ b/www/templates/water-acitivity-menu.html
@@ -3,33 +3,54 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Toutes les activités
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Bons Plans
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		 Nautisme
+		</ion-item>
+		
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Paddle 
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Planche à voile
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
+		  Surf
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
+			Kite surf
 		</ion-item>
 		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Kayak
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Jet ski
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Bouées Tractées
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Plongée
+		</ion-item> 
+		  
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
