--- a/www/templates/association-menu.html
+++ b/www/templates/association-menu.html
@@ -3,33 +3,25 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Toutes les associations
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Social
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Sportives
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Culturelles / Loisirs
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
+		  Environnementales / Patrimoine
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
-		</ion-item>
-		  
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
