--- a/www/templates/informer-menu.html
+++ b/www/templates/informer-menu.html
@@ -3,33 +3,21 @@
 	  <ion-list>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les événements
+		 Offices du Tourisme
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations culturelles
+		  Agences de Voyages
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Fêtes religieuses
+		  Ré’Apps Application
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Manifestations sportives
+		  Ré’Apps Bornes
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Foires rurales / artisanales
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Marché estival
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Autres
-		</ion-item>
-		  
+		 
 	  </ion-list>
 	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
