--- a/www/lib/ionic/scss/_form.scss
+++ b/www/lib/ionic/scss/_form.scss
@@ -206,9 +206,9 @@ input[type="search"],
 input[type="tel"],
 input[type="color"] {
   display: block;
-  padding-top: 2px;
+/*  padding-top: 2px;*/
   padding-left: 0;
-  height: $line-height-computed + $font-size-base;
+  height: 32px;
   color: $input-color;
   vertical-align: middle;
   font-size: $font-size-base;
