--- a/www/templates/discovery-menu.html
+++ b/www/templates/discovery-menu.html
@@ -1,12 +1,15 @@
 <ion-view view-title="Main Menu">
 	<ion-content>
 	  <ion-list>
-		<ion-item href="#/app/festival">
-		 	Fêtes et animations
-		</ion-item>
-		<ion-item href="#/app/nature">
-		  Patrimoine et nature
-		</ion-item>
+		  <a class="item item-icon-right" href="#/app/festival">
+			Fêtes et animations
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/nature">
+			 Patrimoine et nature
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
 	  </ion-list>
 	 <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
