--- a/www/templates/stay-menu.html
+++ b/www/templates/stay-menu.html
@@ -1,11 +1,38 @@
 <ion-view view-title="Main Menu">
 	<ion-content>
 	  <ion-list>
-		<ion-item href="#/app/accommodation">Hébergements</ion-item>
+		  <a class="item item-icon-right" href="#/app/accommodation">
+			Hébergements
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/eat-well">
+			 Bien manger
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/how-to-come">
+			Comment venir
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/deplacer">
+			 Vous déplacer
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/informer">
+			Vous informer
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		   
+		  
+		<!--<ion-item href="#/app/accommodation">Hébergements</ion-item>
 		<ion-item href="#/app/eat-well">Bien manger</ion-item>
 		<ion-item href="#/app/how-to-come">Comment venir</ion-item>
 		<ion-item href="#/app/deplacer">Vous déplacer</ion-item>
-		<ion-item href="#/app/informer">Vous informer</ion-item>
+		<ion-item href="#/app/informer">Vous informer</ion-item>-->
 	  </ion-list>
 	 <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
