--- a/www/templates/activity-menu.html
+++ b/www/templates/activity-menu.html
@@ -1,12 +1,43 @@
 <ion-view view-title="Main Menu">
 	<ion-content>
 	  <ion-list>
-		<ion-item href="#/app/water-activities">Activités nautiques</ion-item>
+		  
+		  <a class="item item-icon-right" href="#/app/water-activities">
+			Activités nautiques
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/sports-recreation">
+			 Sports - Détente
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/trade">
+			Commerce
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/culture">
+			 Culture
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/night-world">
+			Monde de la nuit
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		  <a class="item item-icon-right" href="#/app/association">
+			Associations
+			<i class="icon icon18 ion-chevron-right"></i>
+		  </a>
+		  
+		<!--<ion-item href="#/app/water-activities">Activités nautiques</ion-item>
 		<ion-item href="#/app/sports-recreation">Sports - Détente</ion-item>
 		<ion-item href="#/app/trade">Commerce</ion-item>
 		<ion-item href="#/app/culture">Culture</ion-item>
 		<ion-item href="#/app/night-world">Monde de la nuit</ion-item>
-		<ion-item href="#/app/association">Associations</ion-item>
+		<ion-item href="#/app/association">Associations</ion-item>-->
 	  </ion-list>
 	 <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
 	</ion-content>
