--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar ng-class="$state.current.name == 'app.playlists' ? 'hide' : 'bar-calm'">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
 	  <ion-header-bar class="bar-calm">
-		  <h1 class="title">Menu</h1>
+		  <h1 class="title">Menu </h1>
 	  </ion-header-bar>
 	  
 	  <ion-nav-view name="sideMenuItem"></ion-nav-view>
