--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,15 +1,52 @@
 <ion-view view-title="iledere apps">
   <ion-content>
-	 <img class="logo" ng-src="./img/loog.png" alt="Logo"/>
+	 <img class="logo" ng-src="./img/logo.png" alt="Logo"/>
      
 	 <form class="searhForm" ng-submit="searcForm(searchItem)">
-		  <div class="list list-inset">
+		  <div class="search-box">
 			  <label class="item item-input">
-				 <input type="text" ng-model="searchItem" placeholder="Où voulez-vous aller ?">
+				 <input type="text" ng-model="searchItem" placeholder="Recherche">
 			  </label>
-			  
-			  <button class="button button-block button-calm" type="submit">Search</button>
+			   
+			  <button class="button button-calm button-search" type="submit">
+				  <img ng-src="./img/search.png"/>
+			  </button>
 		 </div>
-	</form>
+	</form> <!--/Form -->
+	
+	  <div class="list-wrapper">
+		  <div class="list">
+			  <a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon"><img ng-src="./img/travel.png"/></i>
+				L’île de Ré
+				<i class="icon ion-chevron-right"></i>
+			  </a>
+			  
+			  <a class="item item-icon-left item-icon-right" href="#/app/stay">
+				<i class="icon"><img ng-src="./img/bed.png"/></i>
+				Séjour
+				<i class="icon ion-chevron-right"></i>
+			  </a>
+			  
+			  <a class="item item-icon-left item-icon-right" href="#/app/discovery">
+				<i class="icon"><img ng-src="./img/explore.png"/></i>
+				Découverte
+				<i class="icon ion-chevron-right"></i>
+			  </a>
+			  
+			  <a class="item item-icon-left item-icon-right" href="#/app/activities">
+				<i class="icon"><img ng-src="./img/swim.png"/></i>
+				 Activités
+				<i class="icon ion-chevron-right"></i>
+			  </a>
+			  
+			  <a class="item item-icon-left item-icon-right" href="#">
+				<i class="icon"><img ng-src="./img/news.png"/></i>
+				 Actualités
+				<i class="icon ion-chevron-right"></i>
+			  </a>
+		 </div>
+	  </div>
+   
  </ion-content>
 </ion-view>
